Memory selection taken care of by PMMemoryView.